Added option to config file for the default timezone.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,4 @@ hour_choice_name = hours
 day_choice_name = days
 played_comm_name = played
 played_comm_desc = View the map history of a server
+timezone_connector = on
