--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -14,3 +14,4 @@ hour_choice_name = horas
 day_choice_name = dias
 played_comm_name = jogados
 played_comm_desc = Veja histórico de mapas de um servidor.
+timezone_connector = no
