Changed messages entries with 'connector' to 'connective'

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,7 @@
 too_long = The listing is too big to be sent as a message.
 problem_on_retrieval = Unable to perform the search due to internal problems.
 no_rounds_found = No rounds were found.
-time_connector = at
+time_connective = at
 search_spam_too_big = You can list map history up to six months ago.
 map_attachment_name = maps
 time_option_name = time
@@ -14,4 +14,4 @@ hour_choice_name = hours
 day_choice_name = days
 played_comm_name = played
 played_comm_desc = View the map history of a server
-timezone_connector = on
+timezone_connective = on
