Fixed wrong localization entry name

--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -1,7 +1,7 @@
 too_long = A listagem é muito grande para ser enviada como uma mensagem.
 problem_on_retrieval = Não foi possível realizar a busca devido a problemas internos.
 no_rounds_found = Não foram encontradas partidas.
-time_connector = ás
+time_connective = ás
 search_spam_too_big = Você pode listar o histórico de mapas de até seis meses atrás.
 map_attachment_name = mapas
 time_option_name = tempo
@@ -14,4 +14,4 @@ hour_choice_name = horas
 day_choice_name = dias
 played_comm_name = jogados
 played_comm_desc = Veja histórico de mapas de um servidor.
-timezone_connector = no
+timezone_connective = no
