Added spanish localization. It required a Locale conversion to deal with Discord's non standard locales. Defaults unknown discord locale to spanish.

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -3,7 +3,7 @@
 too_long = La lista es muy larga para ser enviada en un solo mensaje.
 problem_on_retrieval = No fue posible realizar la busqueda debido a problemas internos.
 no_rounds_found = No se encontraron partidas.
-time_connector = a las
+time_connective = a las
 search_spam_too_big = Solo se puede listar el historial de mapas de hasta seis meses atras.
 map_attachment_name = mapas
 time_option_name = tiempo
@@ -16,3 +16,4 @@ hour_choice_name = horas
 day_choice_name = días
 played_comm_name = jugados
 played_comm_desc = Ver el historial de mapas de un servidor.
+timezone_connective = en
