--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -1,7 +1,7 @@
 too_long = A listagem é muito grande para ser enviada como uma mensagem.
 problem_on_retrieval = Não foi possível realizar a busca devido a problemas internos.
 no_rounds_found = Não foram encontradas partidas.
-time_connective = ás
+time_connective = às
 search_spam_too_big = Você pode listar o histórico de mapas de até seis meses atrás.
 map_attachment_name = mapas
 time_option_name = tempo
