Configurable command's default timespan and unit.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,11 +5,11 @@ time_connective = at
 search_spam_too_big = You can list map history up to six months ago.
 map_attachment_name = maps
 time_option_name = time
-time_option_desc = List the last played maps in this amount of time.
+time_option_desc = Search timespan, if not specified it defaults to {0}. 
 unit_option_name = unit
-unit_option_desc = Time unit to be used for the search.
+unit_option_desc = Search time unit. if not specified it defaults to {0}.
 server_option_name = server
-server_option_desc = List the played maps on this server.
+server_option_desc = Server to be searched.
 hour_choice_name = hours
 day_choice_name = days
 played_comm_name = played
