--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -7,11 +7,11 @@ time_connective = a las
 search_spam_too_big = Solo se puede listar el historial de mapas de hasta seis meses atras.
 map_attachment_name = mapas
 time_option_name = tiempo
-time_option_desc = Lista de los últimos mapas jugados en este período de tiempo.
+time_option_desc = Unidad de tiempo que se usará en la búsqueda, si no se especifica el valor predeterminado es {0}.
 unit_option_name = unidad
-unit_option_desc = Unidad de tiempo a ser usada en la busqueda.
+unit_option_desc = Unidad de tiempo a ser usada en la busqueda, si no se especifica, el valor predeterminado es {0}.
 server_option_name = servidor
-server_option_desc = Lista de los mapas jugados en este servidor.
+server_option_desc = Servidor a buscar.
 hour_choice_name = horas
 day_choice_name = días
 played_comm_name = jugados
