--- a/src/main/resources/messages_pt.properties
+++ b/src/main/resources/messages_pt.properties
@@ -5,11 +5,11 @@ time_connective = às
 search_spam_too_big = Você pode listar o histórico de mapas de até seis meses atrás.
 map_attachment_name = mapas
 time_option_name = tempo
-time_option_desc = Lista os últimos mapas jogadados neste período de tempo.
+time_option_desc = Tempo de busca, se não especificado o padrão é {0}.
 unit_option_name = unidade
-unit_option_desc = Unidade de tempo a ser usada na busca.
+unit_option_desc = Unidade de tempo a ser usada na busca, se não especificado o padrão é em {0}.
 server_option_name = servidor
-server_option_desc = Lista os mapas jogados neste servidor.
+server_option_desc = Servidor a ser buscado.
 hour_choice_name = horas
 day_choice_name = dias
 played_comm_name = jogados
